2009-10-14 24:00 JST  norton

        * ChangeLog: Add new ChangeLog